# MFG

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt~  DEPS.md  README.md
cmake_modules/: FindCSparse.cmake  FindOpenGL.cmake
config/: .gitignore  example.ini  mfgSettings-hrbb4.ini  mfgSettings-kitti00.ini  mfgSettings-kitti07.ini  mfgSettings.ini  mfgSettings.ini.example  mfgSettings.ini~  other.ini
ext/: CMakeLists.txt
ext/levmar-2.6/: CMakeLists.txt  compiler.h  misc.h
ext/lsd-1.5/: CMakeLists.txt  lsd.h
includes/levmar/: compiler.h  levmar.h  lm.h  misc.h
includes/lsd/: lsd.h
src/: CMakeLists.txt  MfgMap.cpp  MfgSingleView.cpp  MfgTwoView.cpp  TwoView.cpp  View.cpp  consts.h  edge_line_vp_cam.cpp  edge_line_vp_cam.h  edge_line_vp_plane.cpp  edge_line_vp_plane.h  edge_point_plane.cpp  edge_point_plane.h  edge_vnpt_cam.cpp  edge_vnpt_cam.h  epnp.cpp  epnp_interface.cpp  est3dpt.cpp  estfundm.cpp  estfundm_g2o.cpp  estfundm_helper.cpp  export.cpp  features2d.h  features3d.h  glwidget.cpp  glwidget.h  linematch.cpp  lsd.c  main.cpp  mfg-ba-g2o.cpp  mfg-ba-pt-g2o.cpp  mfg-ba-pt-relative.cpp  mfg-ba-ptln.cpp  mfg-ba-ptlnvp-relative.cpp  mfg-ba-ptlnvp.cpp  mfg-ba-pts.cpp  mfg-pos-ba.cpp  mfg.cpp  mfg.h  mfg_qt.ui  (+20 more)
src/core/: CMakeLists.txt  main.cpp
src/features/: CMakeLists.txt  edge_cam_cam_dist.cpp  edge_cam_cam_dist.h  edge_line_vp_cam.cpp  edge_line_vp_cam.h  edge_line_vp_plane.cpp  edge_line_vp_plane.h  edge_point_plane.cpp  edge_point_plane.h  edge_vnpt_cam.cpp  edge_vnpt_cam.h  epnp.cpp  epnp.h  epnp.h~  epnp_interface.cpp  features2d.h  features3d.h  linematch.cpp  vanishpoint.cpp  vertex_lineendpts.cpp  vertex_lineendpts.h  vertex_plane.cpp  vertex_plane.h  vertex_vnpt.cpp  vertex_vnpt.h  vpcov_helper.cpp
src/featuresGL/: CMakeLists.txt  edge_line_vp_cam_gl.cpp  edge_line_vp_cam_gl.h  edge_line_vp_plane_gl.cpp  edge_line_vp_plane_gl.h  edge_point_plane_gl.cpp  edge_point_plane_gl.h  edge_vnpt_cam_gl.cpp  edge_vnpt_cam_gl.h  vertex_lineendpts_gl.cpp  vertex_lineendpts_gl.h  vertex_plane_gl.cpp  vertex_plane_gl.h  vertex_vnpt_gl.cpp  vertex_vnpt_gl.h
src/gui/: CMakeLists.txt  glwidget.cpp  glwidget.h  main.cpp  window.cpp  window.h
src/matlab/: plot_mfg_traj.m
src/mfgcore/: CMakeLists.txt  est3dpt.cpp  estfundm.cpp  estfundm_helper.cpp  export.cpp  export.h  mfg-ba-g2o.cpp  mfg-ba-pt-g2o.cpp  mfg.cpp  mfg.h  mfgthread.cpp  mfgthread.h  mfgutils.cpp  mfgutils.h  optimize.cpp  optimize.h  twoview.cpp  view.cpp  view.h
src/mfglib/: CMakeLists.txt  est3dpt.cpp  estfundm_g2o.cpp  export.cpp  mfgthread.cpp  twoview.h  view.cpp
src/nogui/: CMakeLists.txt  main.cpp
src/unused/: estfundm_g2o.cpp  mfg-ba-pt-g2o.cpp  mfg-ba-ptlnvp-relative.cpp  mfg-ba-ptlnvp.cpp  mfgmap.cpp  mfgsingleview.cpp  mfgtwoview.cpp
src/utils/: CMakeLists.txt  consts.h  random.c  random.cpp  random.h  settings.cpp  settings.h  utils.cpp  utils.h
